--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ pip>=25.0.1
 packaging>=24.2
 setuptools~=70.2;python_version<"3.10"
 setuptools>=78.1.0;python_version>="3.10"
+asyncio==3.4.3
+fake-useragent==2.1.0
+httpx==0.28.1
+python-dotenv==1.1.0
 wheel>=0.45.1
 attrs>=25.3.0
 certifi>=2025.1.31
