--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asyncio==3.4.3
 fake-useragent==2.1.0
 httpx==0.28.1
 python-dotenv==1.1.0
+fastapi==0.115.12
 wheel>=0.45.1
 attrs>=25.3.0
 certifi>=2025.1.31
