--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ fake-useragent==2.1.0
 httpx==0.28.1
 python-dotenv==1.1.0
 fastapi==0.115.12
+uvicorn==0.34.2
 wheel>=0.45.1
 attrs>=25.3.0
 certifi>=2025.1.31
